@@ -599,6 +599,7 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
     int i;
     int ac = 1;
     char *av[3];
+    int threshold_cached = 0;
 
     RT_CHECK_DBI(gedp->ged_wdbp->dbip);
 
@@ -618,6 +619,9 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
 	dgcdp.gedp = gedp;
 
 	gvp = gedp->ged_gvp;
+
+	threshold_cached = gvp->gv_threshold;
+
 	if (gvp && gvp->gv_adaptive_plot)
 	    dgcdp.autoview = 1;
 	else
@@ -635,6 +639,7 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
 	dgcdp.wireframe_color_override = 0;
 	dgcdp.fastpath_count = 0;
 	dgcdp.shaded_mode_override = _GED_SHADED_MODE_UNSET;
+	dgcdp.threshold = 0;
 
 	/* default color - red */
 	dgcdp.wireframe_color[0] = 255;
@@ -651,7 +656,7 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
 
 	/* Parse options. */
 	bu_optind = 0;		/* re-init bu_getopt() */
-	while ((c = bu_getopt(argc, (char * const *)argv, "dfhm:nqstuvwx:C:STP:A:oR")) != -1) {
+	while ((c = bu_getopt(argc, (char * const *)argv, "dfhm:nqstuvwx:C:STP:A:oRL:")) != -1) {
 	    switch (c) {
 		case 'u':
 		    dgcdp.draw_edge_uses = 1;
@@ -753,6 +758,26 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
 		    break;
 		case 'R':
 		    dgcdp.autoview = 0;
+		    break;
+		case 'L':
+		    {
+			int t = 0;
+			char *cp = bu_optarg;
+			if (cp) {
+			    t = atoi(cp);
+			    if (t > 0) {
+				dgcdp.threshold = (size_t)t;
+			    } else {
+				bu_vls_printf(gedp->ged_result_str, "invalid -L argument: %s\n", cp);
+				--drawtrees_depth;
+				return GED_ERROR;
+			    }
+			} else {
+			    bu_vls_printf(gedp->ged_result_str, "-L requires an option\n", c);
+			    --drawtrees_depth;
+			    return GED_ERROR;
+			}
+		    }
 		    break;
 		case 'A':
 		case 'o':
@@ -901,6 +926,9 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
 		    ged_autoview(gedp, 1, autoview_args);
 		}
 
+		/* Set the view threshold */
+		gedp->ged_gvp->gv_threshold = dgcdp.threshold;
+
 		/* calculate plot vlists for solids of each draw path */
 		for (i = 0; i < argc; ++i) {
 		    gdlp = paths_to_draw[i];
@@ -911,11 +939,16 @@ _ged_drawtrees(struct ged *gedp, int argc, const char *argv[], int kind, struct 
 
 		    ret = dl_redraw(gdlp, gedp->ged_wdbp->dbip, &gedp->ged_wdbp->wdb_initial_tree_state, gedp->ged_gvp, gedp->ged_create_vlist_callback);
 		    if (ret < 0) {
-			bu_vls_printf(gedp->ged_result_str,
-				"%s: %s redraw failure\n", argv[0], argv[i]);
+			/* restore view threshold */
+			gedp->ged_gvp->gv_threshold = threshold_cached;
+
+			bu_vls_printf(gedp->ged_result_str, "%s: %s redraw failure\n", argv[0], argv[i]);
 			return GED_ERROR;
 		    }
 		}
+
+		/* restore view threshold */
+		gedp->ged_gvp->gv_threshold = threshold_cached;
 
 		bu_free(paths_to_draw, "draw paths");
 	    }
@@ -1163,7 +1196,7 @@ ged_draw_guts(struct ged *gedp, int argc, const char *argv[], int kind)
 		 * provided separately (e.g. '-C 0/255/0' instead of
 		 * '-C0/255/0'), skip the argument too.
 		 */
-		if (strlen(argv[i]) == 2 && strchr("mxCP", argv[i][1])) {
+		if (strlen(argv[i]) == 2 && strchr("mxCPL", argv[i][1])) {
 		    i++;
 		}
 		continue;
